common-applications/test-environment/merlin/merlin-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: merlin
  name: merlin
