common-applications/test-environment/merlin/merlin-server/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: merlin
spec:
  tls:
    - hosts:
        - merlin.test.osinfra.cn
      secretName: server-tls
  rules:
  - host: merlin.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8080
  ingressClassName: nginx
